Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T7042623.out
T7042623.java:10:2: compiler.err.cant.resolve: kindname.class, Undefined1, , 
1 error
